Use `type` instead of `function`, create metric id properly.